--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -113,6 +113,7 @@
   </div>
 </div>
 
+
 <!-- 🔹 Main Navbar -->
 <nav class="navbar navbar-expand-lg">
   <div class="container">
@@ -124,17 +125,21 @@
     <!-- Navbar Links -->
     <div class="collapse navbar-collapse" id="mainNavbar">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/pages/about.html">About Us</a></li>
 
         <!-- Data Services Dropdown -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Data Services</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Email Marketing Data</a></li>
-            <li><a class="dropdown-item" href="#">Lead Generation</a></li>
-            <li><a class="dropdown-item" href="#">Data Appending</a></li>
-            <li><a class="dropdown-item" href="#">Verification & Hygiene</a></li>
+            <li><a class="dropdown-item" href="/pages/b2b-data.html">B2B Data</a></li>
+            <li><a class="dropdown-item" href="/pages/tech-data.html">Technology Data</a></li>
+            <li><a class="dropdown-item" href="/pages/key-design-data.html">Key Decision Makers Data</a></li>
+            <li><a class="dropdown-item" href="/pages/healthcare-data.html">Healthcare Data</a></li>
+            <li><a class="dropdown-item" href="/pages/industry-data.html">Industry Data</a></li>
+            <li><a class="dropdown-item" href="/pages/post-pre-event-data.html">Post Event / Pre Event Database</a></li>
+
+
           </ul>
         </li>
 
@@ -142,14 +147,14 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Data Solutions</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">B2B Solutions</a></li>
-            <li><a class="dropdown-item" href="#">B2C Solutions</a></li>
-            <li><a class="dropdown-item" href="#">Custom Data</a></li>
+            <li><a class="dropdown-item" href="/pages/data-append.html">Data Append</a></li>
+            <li><a class="dropdown-item" href="/pages/email-append.html">Email Append</a></li>
+            <li><a class="dropdown-item" href="/pages/email-marketing-programs.html">Email Marketing Programs</a></li>
           </ul>
         </li>
 
-        <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="/pages/pricing.html">Pricing</a></li>
+        <li class="nav-item"><a class="nav-link" href="/pages/contact-us.html">Contact Us</a></li>
       </ul>
     </div>
   </div>
