--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -135,8 +135,8 @@
             <li><a class="dropdown-item" href="/pages/b2b-data.html">B2B Data</a></li>
             <li><a class="dropdown-item" href="/pages/tech-data.html">Technology Data</a></li>
             <li><a class="dropdown-item" href="/pages/key-design-data.html">Key Decision Makers Data</a></li>
-            <li><a class="dropdown-item" href="/pages/healthcare-data.html">Healthcare Data</a></li>
-            <li><a class="dropdown-item" href="/pages/industry-data.html">Industry Data</a></li>
+            <li><a class="dropdown-item" href="/pages/healthcare.html">Healthcare Data</a></li>
+            <li><a class="dropdown-item" href="/pages/industry.html">Industry Data</a></li>
             <li><a class="dropdown-item" href="/pages/post-pre-event-data.html">Post Event / Pre Event Database</a></li>
 
 
@@ -149,7 +149,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/pages/data-append.html">Data Append</a></li>
             <li><a class="dropdown-item" href="/pages/email-append.html">Email Append</a></li>
-            <li><a class="dropdown-item" href="/pages/email-marketing-programs.html">Email Marketing Programs</a></li>
+            <li><a class="dropdown-item" href="/pages/email-marketing.html">Email Marketing Programs</a></li>
           </ul>
         </li>
 
